# CMakeList.txt : CMake project for ConsoleEditor, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ConsoleEditor "main.cpp"  "Editor.h" "Editor.cpp")

# TODO: Add tests and install targets if needed.
